--- a/index3.html
+++ b/index3.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Jnn1x0 by jnn1x0</title>
+    <title>Test3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+      <h1>test3</h1>
     <section class="page-header">
       <h1 class="project-name">Jnn1x0</h1>
       <h2 class="project-tagline">My Page</h2>
@@ -52,6 +53,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
