CESIUMを読み込むコードを追加した。

--- a/index3.html
+++ b/index3.html
@@ -77,6 +77,17 @@
 
     </section>
 
+    <div id="cesiumContainer"></div>
+    <script>
+      var viewer = new Cesium.Viewer('cesiumContainer', {
+        imageryProvider: new Cesium.OpenStreetMapImageryProvider({
+          url: 'http://cyberjapandata.gsi.go.jp/xyz/std/',
+          credit: new Cesium.Credit('地理院タイル', '', 'http://maps.gsi.go.jp/development/ichiran.html')
+        }),
+        baseLayerPicker: false
+      });
+      viewer.scene.camera.setPositionCartographic(Cesium.Cartographic.fromDegrees(140.00, 36.14, 20000000.0));
+    </script>
 
   </body>
 </html>
