指定した位置・水平垂直角度で表示する処理を追加

--- a/index.html
+++ b/index.html
@@ -38,7 +38,20 @@
     }),
     baseLayerPicker: false
   });
-  viewer.scene.camera.setPositionCartographic(Cesium.Cartographic.fromDegrees(140.00, 36.14, 20000000.0));
+
+  // 古いAPI？のため動作しない(最新のAPIドキュメントにはsetPositionCartographic関数は存在しない)
+  //viewer.scene.camera.setPositionCartographic(Cesium.Cartographic.fromDegrees(140.00, 36.14, 20000000.0));
+
+  // 指定した位置・水平垂直角度で表示する
+  // 参考: https://cesiumjs.org/Cesium/Build/Documentation/Camera.html?classFilter=camera#setView
+  var camera = viewer.camera;
+  camera.setView({
+      position: Cesium.Cartesian3.fromDegrees(141.303406, 38.434228, 25000.0),
+      heading: Cesium.Math.toRadians(0.0), // デフォルト値(北方向)
+      pitch: Cesium.Math.toRadians(-90),   // デフォルト値(直下)
+      roll: 0.0
+  });
+
 </script>
 </body>
 </html>
