--- a/index.html
+++ b/index.html
@@ -31,25 +31,39 @@
 <body>
 <div id="cesiumContainer"></div>
 <script>
-  var viewer = new Cesium.Viewer('cesiumContainer', {
-    imageryProvider: new Cesium.OpenStreetMapImageryProvider({
-      url: 'http://cyberjapandata.gsi.go.jp/xyz/std/',
+
+  // レイヤ定義
+
+  // 地理院地図（標準）レイヤ プロバイダー
+  var provider_gsjistd = new Cesium.UrlTemplateImageryProvider({
+      url: 'https://cyberjapandata.gsi.go.jp/xyz/std/{z}/{x}/{y}.png',
       credit: new Cesium.Credit('地理院タイル', '', 'http://maps.gsi.go.jp/development/ichiran.html')
-    }),
-    baseLayerPicker: false
   });
 
-  // 古いAPI？のため動作しない(最新のAPIドキュメントにはsetPositionCartographic関数は存在しない)
-  //viewer.scene.camera.setPositionCartographic(Cesium.Cartographic.fromDegrees(140.00, 36.14, 20000000.0));
+  // 標高 プロバイダー
+  var provider_terrain = new Cesium.PngElevationTileTerrainProvider();
 
-  // 指定した位置・水平垂直角度で表示する
-  // 参考: https://cesiumjs.org/Cesium/Build/Documentation/Camera.html?classFilter=camera#setView
-  var camera = viewer.camera;
-  camera.setView({
-      position: Cesium.Cartesian3.fromDegrees(141.303406, 38.434228, 25000.0),
-      heading: Cesium.Math.toRadians(0.0), // デフォルト値(北方向)
-      pitch: Cesium.Math.toRadians(-90),   // デフォルト値(直下)
+  var viewer = new Cesium.Viewer('cesiumContainer',
+    {
+      imageryProvider: provider_gsjistd,
+      terrainProvider: provider_terrain,
+      baseLayerPicker: false,
+      geocoder: false,
+      homeButton: false,
+      timeline: false,
+      animation: false,
+      //useDefaultRenderLoop: false,
+      mapProjection: new Cesium.WebMercatorProjection(Cesium.Ellipsoid.WGS84)
+    }
+  );
+
+  viewer.camera.setView({
+    destination: Cesium.Cartesian3.fromDegrees(141.44683653, 38.44492323, 1000.0),
+    orientation: {
+      heading: Cesium.Math.toRadians(0.0),
+      pitch: Cesium.Math.toRadians(-25.0),
       roll: 0.0
+    }
   });
 
 </script>
