--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </head>
 <body>
 <div id="cesiumContainer"></div>
+<script src="http://gsj-seamless.jp/labs/elev2/tools/pngElevationTileTerrainProvider-1.1.1/pngElevationTileTerrainProvider.js"></script>
 <script>
 
   // レイヤ定義
